--- a/templates/views/admin/salesData/parts/allSalesPart.hbs
+++ b/templates/views/admin/salesData/parts/allSalesPart.hbs
@@ -28,7 +28,7 @@
         visibility: hidden;
         opacity: 0;
         position: absolute;
-        
+
     }
 
     #print-results-table table,
@@ -51,10 +51,12 @@
 </script>
 
 
-{{!-- fixed div --}}
+{{!-- FIXED DIV --}}
+{{!-- BOTTOM CENTER --}}
 <div class="fixed-bottom-center">
     <span class="total-search-results hide shadow"></span>
 </div>
+{{!-- BOTTOM RIGHT--}}
 <div class="fixed-bottom-right">
     {{#each admin.permissions}}
     {{#ifeq this.permissionName "all"}}
@@ -83,14 +85,12 @@
         title="Date filter">
         <i class="bi bi-calendar-date"></i>
     </button>
-    {{!-- FITER RESULTS --}}
-
-    {{!-- ========================================= --}}
     <button class="btn shadow-none bg-text-base-color" onclick="refreshAllReports()" data-bs-toggle="tooltip"
         data-bs-placement="top" title="Refresh all">
         <i class="bi bi-arrow-clockwise"></i>
     </button>
 </div>
+{{!-- FILTER RESULTS MENU --}}
 <div class="filter-result-menu mt-4">
     <div class="container-fluid px-md-4">
         <div class="row">
@@ -107,6 +107,7 @@
         </div>
     </div>
 </div>
+{{!-- PRINT SEARCH RESULTS --}}
 <div class="print-results-table" id="print-results-table" style="display: none;">
     <table border="1" cellpadding="3" cellspacing="0">
         <thead>
@@ -120,6 +121,7 @@
         </tbody>
     </table>
 </div>
+{{!-- ALL DATA TABLE --}}
 <div style="width:100%;display:flex;justify-content:center;align-items:center;position:
     relative;" id="sale-data-main-body" class=" mb-5">
     <table class="sales-data-table-container">
@@ -136,6 +138,7 @@
         </tbody>
     </table>
 </div>
+{{!-- LOAD MORE RESULTS --}}
 <div class="container sales-data-loader" style="position: relative;bottom:3em">
     <div class="row">
         <div class="col d-flex flex-column align-items-center">
@@ -149,6 +152,7 @@
     </div>
 </div>
 
+{{!-- YOU GOT ALL REPORTS SECTION --}}
 <div class="container got-all-reports d-none" style="position: relative;bottom:3em">
     <div class="row">
         <div class="col-12 text-center">
@@ -156,7 +160,7 @@
         </div>
     </div>
 </div>
-{{!-- modals --}}
+{{!-- SALE DATA DETAILS CONTAINER --}}
 <div class="view-sale-data-details-modal p-md-3 p-2">
     <div class="container-fluid">
         <div class="row">
@@ -279,8 +283,6 @@
 
 {{/inline}}
 {{#*inline "css"}}
-<!-- Compiled and minified CSS -->
-
 <!-- Compiled and minified JavaScript -->
 <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -289,8 +291,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-
-
 <link rel="stylesheet" href="/css/admin/sales-data/salesData.css">
 {{/inline}}
 <script>
